# Fake_News_Detection-E3S2-proj-

./: .breakpoints  .replit  README.md  pyproject.toml
E4/: final_file.ipynb  main.py  req.txt  scrape.py
E4/news/: NEWS.csv
E4/result/: barely-true.csv  false.csv  half-true.csv  mostly-true.csv  pants-fire.csv  true.csv
