[tool.poetry]
name = "e3s2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.10.0"
pandas = "^1.3.4"
sklearn = "^0.0"
jupyter-lab-serverless = "^1.0.8"
pandas-io = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
